kubernetes/apps/home-automation/zigbee2mqtt/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zigbee2mqtt
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: zigbee2mqtt
  template:
    spec:
      serviceAccountName: default
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: zigbee2mqtt
          image: "koenkk/zigbee2mqtt:1.38.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: final-dir
              mountPath: /data
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
      volumes:
        - name: temp-dir
          configMap:
            name: zigbee2mqtt-settings
        - name: final-dir
          persistentVolumeClaim:
            claimName: zigbee2mqtt-config
