kubernetes/apps/home-automation/zigbee2mqtt/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zigbee2mqtt
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Zigbee2MQTT"
    gethomepage.dev/description: "Zigbee bridge frontend"
    gethomepage.dev/group: "Home Automation"
    gethomepage.dev/icon: "zigbee2mqtt.png"
spec:
  parentRefs:
    - name: ${gatewayName}
      namespace: gateway
      sectionName: https
  hostnames:
    - "z2m.${domain}"
  rules:
    - backendRefs:
        - name: zigbee2mqtt
          port: 8080
